--- a/lemons' swiss army knife for Colab.ipynb
+++ b/lemons' swiss army knife for Colab.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lem6ns/colab-swiss-army-knife/blob/master/lemons'_swiss_army_knife_for_Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lem6ns/colab-swiss-army-knife/blob/master/lemons'%20swiss%20army%20knife%20for%20Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -78,11 +78,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uW4xVuLrE-ZN",
-        "outputId": "37694f18-18f6-4e87-d927-5cd0118779c2"
+        "id": "uW4xVuLrE-ZN"
       },
       "outputs": [],
       "source": [
@@ -843,12 +839,13 @@
         "#@markdown <br><center><img src='https://icons.iconarchive.com/icons/visualpharm/must-have/256/Open-icon.png' height=\"50\" alt=\"Gdrive-logo\"/></center>\n",
         "#@markdown <center><h3>Decompress RAR File</h3></center><br>\n",
         "\n",
-        "INPUT_FILE_PATH = \"/content/drive/\" #@param {type:\"string\"}\n",
+        "INPUT_FILE_PATH = \"/content/drive/file.rar\" #@param {type:\"string\"}\n",
         "OUTPUT_PATH = \"/content/drive/\" #@param {type:\"string\"}\n",
         "!unrar x -Y INPUT_FILE_PATH OUTPUT_PATH"
       ],
       "metadata": {
-        "id": "wi_ozR4FsSuW"
+        "id": "wi_ozR4FsSuW",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
